--- a/app/views/app.html
+++ b/app/views/app.html
@@ -2,7 +2,7 @@
     
     <div class="row">
         <div class="col-xs-12">
-            <img src="/resource/1434478414000/che/images/logo_color.jpg"/>
+            <img src="images/logo_color.jpg"/>
         </div>
     </div>
 
@@ -11,7 +11,7 @@
         
         <div class="row">
             <div class="col-xs-12">
-                <h3>Select Merchandise</h3>
+                <h3 >Add Merchandise to Order</h3>
             </div>
         </div>
 
