Minimal working app - with templating, environment vars etc

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,88 +1,1 @@
-body {
-
-}
-
-.layout {
-  display:flex;
-  flex:1;
-  min-height:100vh;
-  
-
-}
-
-.column-left {
-  flex: 1;
-  order: -1;
-  padding:20px;
-}
-
-.column-right {
-  display: flex;
-  flex-direction: column;
-
-  padding:20px;
-
-  flex: 0 0 25em;
-  background-color:#eee;
-
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&amp;0.13+0,0.05+2 */
-  background: -moz-linear-gradient(left,  rgba(0,0,0,0.13) 0%, rgba(0,0,0,0.05) 2%, rgba(0,0,0,0.05) 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(0,0,0,0.13)), color-stop(2%,rgba(0,0,0,0.05)), color-stop(100%,rgba(0,0,0,0.05))); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(left,  rgba(0,0,0,0.13) 0%,rgba(0,0,0,0.05) 2%,rgba(0,0,0,0.05) 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(left,  rgba(0,0,0,0.13) 0%,rgba(0,0,0,0.05) 2%,rgba(0,0,0,0.05) 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(left,  rgba(0,0,0,0.13) 0%,rgba(0,0,0,0.05) 2%,rgba(0,0,0,0.05) 100%); /* IE10+ */
-  background: linear-gradient(to right,  rgba(0,0,0,0.13) 0%,rgba(0,0,0,0.05) 2%,rgba(0,0,0,0.05) 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#21000000', endColorstr='#0d000000',GradientType=1 ); /* IE6-9 */
-
-
-}
-
-
-.table>tbody>tr>td {
-  border:none;
-  font-size:0.95em;
-}
-
-.table>tbody>tr.wrapper>td {
-  font-weight:bold;
-  font-size:1.0em;
-}
-
-table.pricing {
-  justify-content:flex-start;
-}
-table.pricing tr.wrapper-products td {
-  padding:2px 8px;
-  color:#888888;
-}
-table.pricing tr.last-wrapper td {
-  border-bottom:1px solid #ccc;
-}
-
-input.product-wrapper-quantity {
-    width: 60px;
-    display: inline;
-    height: 32px;
-    margin-top: -7px;
-    float: left;
-}
-
-td.hasTax:after {
-    content: '+';
-    position: absolute;
-    margin-left: 4px;
-    color: #D50000;
-}
-
-span.remove-opportunity-wrapper {
-  cursor:pointer;
-  color:red;
-}
-
-.opp-info {
-  text-align:right;
-  display:inline-block;
-}
-
-.opp-info h5 { margin-bottom:0px; }
-.opp-info h3 { margin-top:0px; }
+/* this should be sass */
