--- a/app/views/app.html
+++ b/app/views/app.html
@@ -1,99 +1,1 @@
-<div class="column-left">
-    
-    <div class="row">
-        <div class="col-xs-12">
-            <img src="images/logo_color.jpg"/>
-        </div>
-    </div>
-
-
-    <div class="product-list" ng-controller="productlistcontroller" ng-if="mode === 'products'">
-        
-        <div class="row">
-            <div class="col-xs-12">
-                <h3 >Add Merchandise to Order</h3>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-xs-6">
-                
-                <select>
-                    <option>Apparel</option>
-                    <option>Flights</option>
-                </select>
-            </div>
-            <div class="col-xs-6">
-                <input type="text" placeholder="search"/>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-xs-12">
-                <div ui-grid="{ data: productwrappers, columnDefs: columns }" class="myGrid"></div>
-            </div>
-        </div>
-    </div>
-
-    <div class="payment-list" ng-controller="paymentcontroller" ng-include="templateurl" ng-if="mode === 'payment'">
-        
-    </div>
-
-</div>
-
-<div class="column-right" ng-controller="orderstatuscontroller">
-
-    <div class="opp-info">
-        <h5>Customer Reciept</h5>
-        <h3>{{account.Name}}</h3>
-    </div>
-
-    <table class="table pricing">
-        <tr class="wrapper" ng-repeat-start="purchaseProductWrapper in purchase.purchaseProductWrappers track by $index">
-            <td align="right">
-                <!-- <span tooltip="Remove Item(s)" class="glyphicon glyphicon-remove remove-opportunity-wrapper" ng-click="purchase.deletePurchaseProductWrapper($event, purchaseProductWrapper)"></span> -->
-                <span><input type="number" ng-change="purchaseProductWrapper.changeQuantity(purchase)" class="form-control product-wrapper-quantity" ng-model="purchaseProductWrapper.Quantity__c" /></span>
-                <span>{{purchaseProductWrapper.productWrapper.Name}}</span>
-            </td>
-            <td align="right">{{purchaseProductWrapper.productWrapper.getUnitPrice() * purchaseProductWrapper.Quantity__c | currency}}</td>
-        </tr>
-        <tr tooltip-template="'views/tax-tooltip.html'" tooltip-enable="productWrapperProducts.productAlias.hasTax()" tooltip-append-to-body="false" tooltip-placement="left" class="wrapper-products" ng-repeat="productWrapperProducts in purchaseProductWrapper.productWrapper.productWrapperAliases">
-            <td align="right">{{productWrapperProducts.productAlias.Product_Name__c}}</td>
-            <td align="right" ng-class="{ 'hasTax': productWrapperProducts.productAlias.hasTax()}">
-                {{productWrapperProducts.productAlias.UnitPrice__c * purchaseProductWrapper.Quantity__c | currency}}
-            </td>
-        </tr>
-        <tr ng-repeat-end="opportunityProductWrapper in opportunity.wrappers track by $index" ng-class="{ 'last-wrapper': $last }">
-            <td></td>
-            <td></td>
-        </tr>
-
-        <tr>
-            <td align="right">Sub-Total</td>
-            <td align="right">{{purchase.getSubTotal() | currency}}</td>
-        </tr>
-        <tr>
-            <td align="right">State Tax</td>
-            <td align="right">{{purchase.getTotalSalesTax() | currency }}</td>
-        </tr>
-        <tr>
-            <td align="right">County Tax</td>
-            <td align="right">{{purchase.getTotalCountyTax() | currency }}</td>
-        </tr>
-        <tr>
-            <td align="right">
-                <button class="btn btn-default btn-xs" ng-click="adjustDiscount()">Change Discount</button>
-                Discount
-            </td>
-            <td align="right">({{purchase.Discount__c || 0.00 | currency }})</td>
-        </tr>
-        <tr style="font-weight:bold; font-size:1.2em">
-            <td align="right">Total</td>
-            <td align="right">{{purchase.getOrderTotal() | currency }}</td>
-        </tr>
-
-    </table>
-
-    <button class="btn btn-success" ng-show="mode === 'products'" ng-click="goToPayment()">Proceed to Payment</button>
-    <button class="btn btn-default" ng-show="mode === 'payment'" ng-click="goToProducts()">Change Products</button>
-</div>
+Main Template
