updated to handle basic CRUD operations for forms w/ new backend endpoints - live data read/write form salesforce...

--- a/app/views/app.html
+++ b/app/views/app.html
@@ -44,5 +44,7 @@
 
 		<div smb-form form="form" ng-form="mainform" ng-if="form"></div>
 
+		<button class="slds-button slds-button--brand" ng-click="saveForm()">Save</button>
+
 	</main>
 </div>
