--- a/app/views/field-picklist.html
+++ b/app/views/field-picklist.html
@@ -1,14 +1,14 @@
-<div class="slds-picklist--draggable slds-grid">
+<div class="slds-picklist--draggable slds-grid" ng-controller="liPicklistController as pc">
   <div class="slds-form-element">
     <span class="slds-form-element__label" aria-label="select-1">First Category</span>
     <div class="slds-picklist slds-picklist--multi">
       <ul class="slds-picklist__options slds-picklist__options--multi shown">
-        <li draggable="true" id="po-0-0" class="slds-picklist__item slds-has-icon slds-has-icon--left" aria-selected="false" tabindex="0" role="option">
+        <li draggable="true" id="po-0-0" class="slds-picklist__item slds-has-icon slds-has-icon--left" aria-selected="false" tabindex="0" role="option" ng-repeat="option in options" ng-click="pc.selectOption(option)">
           <span class="slds-truncate">
-            <span>Option One</span>
+            <span>{{option}}</span>
           </span>
         </li>
-        <li draggable="true" id="po-1-1" class="slds-picklist__item slds-has-icon slds-has-icon--left" aria-selected="false" tabindex="-1" role="option">
+        <!-- <li draggable="true" id="po-1-1" class="slds-picklist__item slds-has-icon slds-has-icon--left" aria-selected="false" tabindex="-1" role="option">
           <span class="slds-truncate">
             <span>Option Two</span>
           </span>
@@ -22,22 +22,28 @@
           <span class="slds-truncate">
             <span>Option Four</span>
           </span>
-        </li>
+        </li> -->
       </ul>
     </div>
   </div>
   <div class="slds-grid slds-grid--vertical">
-    <button class="slds-button slds-button--icon-container">
-      <span smb-icon type="utility" icon="left" size="x-small"></span>
+    <button class="slds-button slds-button--icon-container" ng-click="removeValues()">
+      <span li-icon type="utility" icon="left" size="x-small"></span>
     </button>
-    <button class="slds-button slds-button--icon-container">
-      <span smb-icon type="utility" icon="right" size="x-small"></span>
+    <button class="slds-button slds-button--icon-container" ng-click="addValues()">
+      <span li-icon type="utility" icon="right" size="x-small"></span>
     </button>
   </div>
   <div class="slds-form-element">
     <span class="slds-form-element__label" aria-label="select-2">Second Category</span>
     <div class="slds-picklist slds-picklist--multi">
-      <ul class="slds-picklist__options slds-picklist__options--multi shown"></ul>
+      <ul class="slds-picklist__options slds-picklist__options--multi shown">
+        <li draggable="true" id="po-0-0" class="slds-picklist__item slds-has-icon slds-has-icon--left" aria-selected="false" tabindex="0" role="option" ng-repeat="option in selected" ng-click="pc.selectOption(option)">
+          <span class="slds-truncate">
+            <span>{{option}}</span>
+          </span>
+        </li>
+      </ul>
     </div>
   </div>
   <div class="slds-grid slds-grid--vertical">
