--- a/app/views/demo/modal-demo.html
+++ b/app/views/demo/modal-demo.html
@@ -1,1 +1,26 @@
-template!
+<div>
+  <div aria-hidden="false" role="dialog" class="slds-modal slds-modal--large slds-fade-in-open">
+    <div class="slds-modal__container">
+      <div class="slds-modal__header">
+        <h2 class="slds-text-heading--medium">Modal Demo for Angular Lightning</h2>
+        <button class="slds-button slds-button--icon-inverse slds-modal__close" ng-click="close()">
+          <svg aria-hidden="true" class="slds-button__icon slds-button__icon--large">
+            <use xlink:href="/assets/icons/action-sprite/svg/symbols.svg#close"></use>
+          </svg>
+          <span class="slds-assistive-text">Close</span>
+        </button>
+      </div>
+      <div class="slds-modal__content">
+        <div>
+        	This is custom content!
+        </div>
+      </div>
+      <div class="slds-modal__footer">
+        <div class="slds-x-small-buttons--horizontal">
+          <button class="slds-button slds-button--neutral">Cancel</button>
+          <button class="slds-button slds-button--neutral slds-button--brand">Save</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
