--- a/app/views/field-picklist.html
+++ b/app/views/field-picklist.html
@@ -33,10 +33,10 @@
   </div>
   <div class="slds-grid slds-grid--vertical">
     <button class="slds-button slds-button--icon-container">
-      <span smb-icon type="utility" icon="up" size="x-small"></span>
+      <span li-icon type="utility" icon="up" size="x-small"></span>
     </button>
     <button class="slds-button slds-button--icon-container">
-      <span smb-icon type="utility" icon="down" size="x-small"></span>
+      <span li-icon type="utility" icon="down" size="x-small"></span>
     </button>
   </div>
 </div>
