allow scope to be passed into modal

--- a/app/views/demo/modal-demo.html
+++ b/app/views/demo/modal-demo.html
@@ -13,6 +13,8 @@
       <div class="slds-modal__content">
         <div>
         	This is custom content!
+        	<br/>
+        	{{message}}
         </div>
       </div>
       <div class="slds-modal__footer">
