--- a/app/views/field-picklist.html
+++ b/app/views/field-picklist.html
@@ -1,6 +1,6 @@
 <div class="slds-picklist--draggable slds-grid">
   <div class="slds-form-element">
-    <span class="slds-form-element__label" aria-label="select-1">First Category</span>
+    <span class="slds-form-element__label" aria-label="select-1">Available</span>
     <div class="slds-picklist slds-picklist--multi">
       <ul class="slds-picklist__options slds-picklist__options--multi shown">
         <li draggable="true" id="po-0-0" class="slds-picklist__item slds-has-icon slds-has-icon--left" aria-selected="false" tabindex="0" role="option" ng-repeat="option in options track by $index" ng-click="highlightOption(option)">
@@ -20,7 +20,7 @@
     </button>
   </div>
   <div class="slds-form-element">
-    <span class="slds-form-element__label" aria-label="select-2">Second Category</span>
+    <span class="slds-form-element__label" aria-label="select-2">Selected</span>
     <div class="slds-picklist slds-picklist--multi">
       <ul class="slds-picklist__options slds-picklist__options--multi shown">
         <li draggable="true" id="po-0-0" class="slds-picklist__item slds-has-icon slds-has-icon--left" aria-selected="false" tabindex="0" role="option" ng-repeat="option in selected track by $index">
