--- a/app/views/fields/lookup/lookup-dropdown.html
+++ b/app/views/fields/lookup/lookup-dropdown.html
@@ -1,16 +1,15 @@
-<div class="slds-lookup__menu" role="listbox" ng-if="isFocused">
+<div class="slds-lookup__menu" role="listbox">
   <div class="slds-lookup__item">
     <button class="slds-button">
       <svg aria-hidden="true" class="slds-icon slds-icon-text-default slds-icon--small">
         <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"></use>
-      </svg>&quot;{{currentVal}}&quot; in Accounts</button>
+      </svg>&quot;{{currentVal}}&quot; in {{theObject}}</button>
   </div>
   <ul class="slds-lookup__list" role="presentation">
-    <li class="slds-lookup__item" ng-repeat="match in matches track by $index">
-      <a id="s01" href="#" role="option">
+    <li class="slds-lookup__item" ng-repeat="match in matches track by $index" ng-click="selectMatch($index)">
         <svg aria-hidden="true" class="slds-icon slds-icon-standard-account slds-icon--small">
           <use xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"></use>
-        </svg>Paddy&#x27;s Pub</a>
+        </svg>{{match.label}}
     </li>
   </ul>
 </div>
