updates to icons to work more flexibly

--- a/app/views/field-picklist.html
+++ b/app/views/field-picklist.html
@@ -13,10 +13,10 @@
   </div>
   <div class="slds-grid slds-grid--vertical">
     <button class="slds-button slds-button--icon-container" ng-click="selectHighlighted()">
-      <span li-icon type="utility" icon="right" size="x-small"></span>
+      <span li-icon type="utility" icon="right" size="x-small" color="default"></span>
     </button>
     <button class="slds-button slds-button--icon-container" ng-click="removeHighlighted()">
-      <span li-icon type="utility" icon="left" size="x-small"></span>
+      <span li-icon type="utility" icon="left" size="x-small" color="default"></span>
     </button>
   </div>
   <div class="slds-form-element">
@@ -33,10 +33,10 @@
   </div>
   <div class="slds-grid slds-grid--vertical">
     <button class="slds-button slds-button--icon-container">
-      <span li-icon type="utility" icon="up" size="x-small"></span>
+      <span li-icon type="utility" icon="up" size="x-small" color="default"></span>
     </button>
     <button class="slds-button slds-button--icon-container">
-      <span li-icon type="utility" icon="down" size="x-small"></span>
+      <span li-icon type="utility" icon="down" size="x-small" color="default"></span>
     </button>
   </div>
 </div>
