adding correct icons for lookup

--- a/app/views/fields/lookup/lookup-dropdown.html
+++ b/app/views/fields/lookup/lookup-dropdown.html
@@ -1,7 +1,7 @@
 <div class="slds-lookup__menu" role="listbox">
   <div class="slds-lookup__item">
     <button class="slds-button">
-      <span li-icon type="utility" icon="search" size="small"></span>
+      <span li-icon type="utility" icon="search" size="small" color="default"></span>
       &quot;{{currentVal}}&quot; in {{theObject}}</button>
   </div>
   <ul class="slds-lookup__list" role="presentation">
